--- a/SoftCircuits.WebScraper/SoftCircuits.WebScraper.csproj
+++ b/SoftCircuits.WebScraper/SoftCircuits.WebScraper.csproj
@@ -10,12 +10,13 @@
     <RepositoryUrl>https://github.com/SoftCircuits/WebScraper</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>web scraper scraping web-scraper web-scraping html agility bot</PackageTags>
-    <PackageReleaseNotes>Initial release.</PackageReleaseNotes>
+    <PackageReleaseNotes>Reworked UpdateProgressEventArgs class. Now provides a percent instead of current and maximum; Minor tweaks to code and XML comments.</PackageReleaseNotes>
     <NeutralLanguage>en-US</NeutralLanguage>
     <Copyright>Copyright © 2020 SoftCircuits</Copyright>
     <PackageIcon>Logo_64x64.png</PackageIcon>
     <PackageLicenseFile>License.txt</PackageLicenseFile>
-    <Description>.NET library that makes it easy to implement a Web scraper that extracts information from Web pages. Handles paging and supports any number of URL "tags" that can cycled through to generate URL variations.</Description>
+    <Description>.NET library to scrape content from the Internet. Use it to extract information from Web pages in your own application. Extracted data is written to a CSV file. Supports paging and can cycle through all combinations of any number of replacement tags.</Description>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
