--- a/WebScraperApp/WebScraperApp.csproj
+++ b/WebScraperApp/WebScraperApp.csproj
@@ -1,171 +1,44 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4E1F5F3C-9132-4218-A13A-C59005037BEB}</ProjectGuid>
     <OutputType>WinExe</OutputType>
+    <TargetFramework>net5.0-windows</TargetFramework>
+    <UseWindowsForms>true</UseWindowsForms>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+
     <RootNamespace>WebScraper</RootNamespace>
     <AssemblyName>WebScraper</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationIcon>WebScraper.ico</ApplicationIcon>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="CsvParser, Version=2.1.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SoftCircuits.CsvParser.2.1.2\lib\netstandard2.0\CsvParser.dll</HintPath>
-    </Reference>
-    <Reference Include="HtmlMonkey, Version=1.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SoftCircuits.HtmlMonkey.1.1.1\lib\netstandard2.0\HtmlMonkey.dll</HintPath>
-    </Reference>
-    <Reference Include="IniFileParser, Version=1.0.11.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SoftCircuits.IniFileParser.1.0.11\lib\netstandard2.0\IniFileParser.dll</HintPath>
-    </Reference>
-    <Reference Include="SoftCircuits.SimpleLogFile, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SoftCircuits.SimpleLogFile.1.0.2\lib\netstandard2.0\SoftCircuits.SimpleLogFile.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
+    <ProjectReference Include="..\SoftCircuits.WebScraper\SoftCircuits.WebScraper.csproj">
+    </ProjectReference>
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="DataFileManager.cs" />
-    <Compile Include="DataFileManager.Designer.cs">
-      <DependentUpon>DataFileManager.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FieldHelper.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="SessionData.cs" />
-    <Compile Include="frmEditField.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmEditField.Designer.cs">
-      <DependentUpon>frmEditField.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frmEditPlaceholder.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmEditPlaceholder.Designer.cs">
-      <DependentUpon>frmEditPlaceholder.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frmSettings.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmSettings.Designer.cs">
-      <DependentUpon>frmSettings.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frmRun.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmRun.Designer.cs">
-      <DependentUpon>frmRun.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Support\ListBoxEx.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Extensions\ExceptionExtensions.cs" />
-    <Compile Include="frmMain.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmMain.Designer.cs">
-      <DependentUpon>frmMain.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Settings.cs" />
-    <Compile Include="DataFiles.cs" />
-    <EmbeddedResource Include="DataFileManager.resx">
-      <DependentUpon>DataFileManager.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmEditField.resx">
-      <DependentUpon>frmEditField.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmEditPlaceholder.resx">
-      <DependentUpon>frmEditPlaceholder.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmMain.resx">
-      <DependentUpon>frmMain.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmSettings.resx">
-      <DependentUpon>frmSettings.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmRun.resx">
-      <DependentUpon>frmRun.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <SubType>Designer</SubType>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <Compile Include="Properties\Settings.Designer.cs">
+    <PackageReference Include="SoftCircuits.IniFileParser" Version="2.0.0" />
+    <PackageReference Include="SoftCircuits.SimpleLogFile" Version="2.0.0" />
+    <Compile Update="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+
   <ItemGroup>
-    <None Include="App.config" />
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\WebScraper.ico" />
-    <None Include="Resources\save.png" />
-    <None Include="Resources\document-new.png" />
-    <None Include="Resources\folder_open.png" />
-    <None Include="Resources\document_text.png" />
-    <None Include="Resources\document_text-delete.png" />
-    <None Include="Resources\table.png" />
-    <None Include="Resources\StatusAnnotations_Play_16xLG_color.png" />
-    <None Include="Resources\gear1.png" />
-    <None Include="Resources\folder_action_open.png" />
-    <Content Include="WebScraper.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SoftCircuits.WebScraper\SoftCircuits.WebScraper.csproj">
-      <Project>{55dfe05f-e3c9-46e6-9ee1-35ff3f248d82}</Project>
-      <Name>SoftCircuits.WebScraper</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
