--- a/SoftCircuits.WebScraper/SoftCircuits.WebScraper.csproj
+++ b/SoftCircuits.WebScraper/SoftCircuits.WebScraper.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net5.0;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net8.0;net7.0;net6.0;netstandard2.0</TargetFrameworks>
     <Nullable>annotations</Nullable>
-    <Nullable Condition="'$(TargetFramework)' == 'net5.0'">enable</Nullable>
+    <Nullable Condition="'$(TargetFramework)' != 'netstandard2.0'">enable</Nullable>
     <LangVersion>9.0</LangVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Authors>Jonathan Wood</Authors>
     <Company>SoftCircuits</Company>
@@ -13,15 +14,16 @@
     <RepositoryUrl>https://github.com/SoftCircuits/WebScraper</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>web scraper scraping web-scraper web-scraping html agility bot</PackageTags>
-    <PackageReleaseNotes>Now targets .NET Standard 2.0 or .NET 5.0, and supports nullable reference types.</PackageReleaseNotes>
+    <PackageReleaseNotes>Added missing XML documentation file; Added direct support for .NET 7.0 and .NET 8.0; Removed direct support for now deprecated .NET 5.0; Minor tweaks and enhancements.</PackageReleaseNotes>
     <NeutralLanguage>en-US</NeutralLanguage>
-    <Copyright>Copyright © 2020-2021 SoftCircuits</Copyright>
+    <Copyright>Copyright © 2020-2024 SoftCircuits</Copyright>
     <PackageIcon>Logo_64x64.png</PackageIcon>
     <PackageLicenseFile>License.txt</PackageLicenseFile>
     <Description>.NET library to scrape content from the Internet. Use it to extract information from Web pages in your own application. Extracted data is written to a CSV file. Supports paging and can cycle through all combinations of any number of replacement tags.
 
 Now targets .NET Standard 2.0 or .NET 5.0, and supports nullable reference types.</Description>
-    <Version>2.0.0</Version>
+    <Version>2.1.0</Version>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -37,6 +39,10 @@ Now targets .NET Standard 2.0 or .NET 5.0, and supports nullable reference types
     <None Include="..\Logo_64x64.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
+    </None>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
     </None>
   </ItemGroup>
 
